[project]
name = "ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "build>=1.4.0",
    "chromadb>=1.4.1",
    "fastapi>=0.128.0",
    "fun-args",
    "html2text>=2025.4.15",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.1",
    "langchain-openai>=1.1.7",
    "langsmith>=0.6.7",
    "lxml>=6.0.2",
    "numpy>=2.4.1",
    "openai>=2.16.0",
    "openevals>=0.1.3",
    "playwright>=1.58.0",
    "twine>=6.2.0",
    "uvicorn>=0.40.0",
]

[tool.uv.workspace]
members = [
    "fun_args",
]

[tool.uv.sources]
fun-args = { workspace = true }
